fixed dropdown on mobile

--- a/marketplace-client/src/App.css
+++ b/marketplace-client/src/App.css
@@ -14,7 +14,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  font-size: 50px;
+  font-size: 0px;
   color: #fff;
   font-family: 'cabin';
 }
